--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -41,6 +41,17 @@ android {
         versionName flutterVersionName
     }
 
+    namespace 'gabrimatic.info.restart'
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
